# apps/api/openapi.json
@@ -168,6 +168,12 @@
                     "minLength": 1,
                     "maxLength": 80
                   },
+                  "coverage": {
+                    "type": "string",
+                    "enum": [
+                      "germany"
+                    ]
+                  },
                   "bounds": {
                     "type": "array",
                     "minItems": 4,
